# TTDObjectsPy

./: .gitignore  .mcp.json  README.md  pyproject.toml  run_server.py  test_all_functions.py
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
asset/: installed_version.txt
inc/TTD/: ErrorReporting.h  Formatters.h  IReplayEngine.h  IReplayEngineRegisters.h  IReplayEngineStl.h  IdnaBasicTypes.h  NirvanaBasicTypes.h  TTDCommonTypes.h  TTDLiveRecorder.h  TypeUtilities.h
installer/: .gitignore  CMakeLists.txt  README.md  RELEASE.txt  installer.ps1
installer/include/: http_downloader.h  windbg_installer.h  zip_extractor.h
installer/src/: http_downloader.cpp  main.cpp  windbg_installer.cpp  zip_extractor.cpp
scripts/: install_codex_plugin.ps1  run_codex_mcp.py
skills/ttd-analysis/: SKILL.md
skills/ttd-analysis/agents/: openai.yaml
src/ttdobjectspy/: __init__.py  bindings.py  bridge_server.py  cursor.py  disasm.py  engine.py  server.py  ttd_types.py  unified_bridge.py  unified_session.py
src/ttdobjectspy/tests/: __init__.py  test_disasm.py
tests/: test_installer_runtime.py
